[package]
name = "yolo-backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
chrono = "0.4.26"
clap = { version = "4.4.1", features = ["derive"] }
fs_extra = "1.3.0"
futures-core = "0.3.28"
futures-util = "0.3.28"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "process"] }

[build-dependencies]
embedded_version = { git = "https://github.com/notseanray/embedded-version" }
